--- a/index.html
+++ b/index.html
@@ -1,94 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escalation Matrix - Quantum</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to the external CSS file -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Escalation Matrix - Quantum</title>
+  <link rel="stylesheet" href="styles.css" />
+  <style>
+    /* Inline fallback styling (if external CSS isn't used) */
+
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding-top: 130px; /* Prevents overlap with fixed header */
+      padding-bottom: 60px; /* Prevents overlap with fixed footer */
+      background-color: #f4f4f9;
+      overflow-x: hidden;
+    }
+
+    header {
+      background-color: #003366;
+      color: white;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      padding: 20px 0;
+      text-align: center;
+      z-index: 1000;
+    }
+
+    .header-content h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+
+    .header-content h2 {
+      margin: 10px 0 0;
+      font-size: 18px;
+    }
+
+    .container {
+      padding: 20px;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    #table-container {
+      overflow-y: auto;
+      max-height: calc(100vh - 200px); /* Adjust for header and footer */
+      margin-top: 20px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 30px;
+    }
+
+    table, th, td {
+      border: 1px solid #ddd;
+    }
+
+    th, td {
+      padding: 12px;
+      text-align: left;
+      word-wrap: break-word;
+      max-width: 200px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    thead {
+      background-color: #005acf;
+      color: white;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+    }
+
+    tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+
+    footer {
+      background-color: #003366;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
 
-    <!-- Header -->
-    <header>
-        <h1>QUANTUM HRM SYSTEMS PVT LIMITED</h1>
-        <h2>Escalation Matrix</h2>
-    </header>
-
-    <!-- Main Content Container -->
-    <div class="container" id="table-container">
-        <!-- The table will be inserted here by JavaScript -->
+  <!-- Header -->
+  <header>
+    <div class="header-content">
+      <h1>QUANTUM HRM SYSTEMS PVT LIMITED</h1>
+      <h2>Escalation Matrix</h2>
     </div>
+  </header>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 All rights reserved. QUANTUM HRM SYSTEMS PVT LIMITED</p>
-    </footer>
+  <!-- Main Content -->
+  <div class="container">
+    <div id="table-container">
+      <!-- Table will be loaded here -->
+    </div>
+  </div>
 
-    <!-- JavaScript to fetch and display the CSV data -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script>
-        // The URL to the raw CSV file on GitHub
-        const csvUrl = "https://raw.githubusercontent.com/hrmsystemsngl/matrix/main/Escalation%20Matrix%20-%2018%20may.csv";
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 All rights reserved. QUANTUM HRM SYSTEMS PVT LIMITED</p>
+  </footer>
 
-        // Function to fetch and parse the CSV data
-        fetch(csvUrl)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok.');
-                }
-                return response.text();
-            })
-            .then(csvData => {
-                // Parse the CSV data using PapaParse
-                Papa.parse(csvData, {
-                    complete: function(results) {
-                        const data = results.data;
-                        console.log(data); // For debugging: Log parsed data to console
-                        // Create table dynamically
-                        createTable(data);
-                    },
-                    error: function(error) {
-                        console.error('Error parsing CSV:', error.message);
-                    }
-                });
-            })
-            .catch(error => {
-                console.error('Error fetching the CSV file:', error);
-            });
+  <!-- JavaScript to fetch and display CSV -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+  <script>
+    const csvUrl = "https://raw.githubusercontent.com/hrmsystemsngl/matrix/main/Escalation%20Matrix%20-%2018%20may.csv";
 
-        // Function to create and display the table
-        function createTable(data) {
-            if (data.length === 0) {
-                document.getElementById('table-container').innerHTML = '<p>No data available</p>';
-                return;
-            }
-
-            let tableHtml = '<table>';
-            
-            // Create table header
-            tableHtml += '<thead><tr>';
-            const headers = data[0];  // First row as headers
-            for (let header of headers) {
-                tableHtml += `<th>${header}</th>`;
-            }
-            tableHtml += '</tr></thead>';
-            
-            // Create table body
-            tableHtml += '<tbody>';
-            for (let i = 1; i < data.length; i++) {
-                tableHtml += '<tr>';
-                const row = data[i];
-                for (let cell of row) {
-                    tableHtml += `<td>${cell}</td>`;
-                }
-                tableHtml += '</tr>';
-            }
-            tableHtml += '</tbody></table>';
-
-            // Insert the table into the DOM
-            document.getElementById('table-container').innerHTML = tableHtml;
+    fetch(csvUrl)
+      .then(response => {
+        if (!response.ok) {
+          throw new Error('Network response was not ok.');
         }
-    </script>
+        return response.text();
+      })
+      .then(csvData => {
+        Papa.parse(csvData, {
+          complete: function(results) {
+            const data = results.data;
+            console.log(data); // Debug
+            createTable(data);
+          },
+          error: function(error) {
+            console.error('Error parsing CSV:', error.message);
+          }
+        });
+      })
+      .catch(error => {
+        console.error('Error fetching the CSV file:', error);
+      });
+
+    function createTable(data) {
+      if (!data || data.length === 0) {
+        document.getElementById('table-container').innerHTML = '<p>No data available</p>';
+        return;
+      }
+
+      let tableHtml = '<table>';
+      tableHtml += '<thead><tr>';
+      for (let header of data[0]) {
+        tableHtml += `<th>${header}</th>`;
+      }
+      tableHtml += '</tr></thead><tbody>';
+
+      for (let i = 1; i < data.length; i++) {
+        const row = data[i];
+        // Skip empty rows
+        if (row.every(cell => cell.trim() === '')) continue;
+        tableHtml += '<tr>';
+        for (let cell of row) {
+          tableHtml += `<td>${cell}</td>`;
+        }
+        tableHtml += '</tr>';
+      }
+
+      tableHtml += '</tbody></table>';
+      document.getElementById('table-container').innerHTML = tableHtml;
+    }
+  </script>
 
 </body>
 </html>
