--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <!-- JavaScript to fetch and display CSV -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   <script>
-    const csvUrl = "https://raw.githubusercontent.com/hrmsystemsngl/matrix/main/Escalation%20Matrix%20-%2018%20may.csv";
+    const csvUrl = "https://github.com/hrmsystems/matrix/blob/main/Escalation%20Matrix%20-%2018%20may.csv";
 
     fetch(csvUrl)
       .then(response => {
